# Mathematical-Modeling-Of-Infectious-Diseases-V1

./: .gitignore  CMakeLists.txt  Readme.md
data/: contacts.csv
data/configuration/: hill_climbing_settings.txt  initial_guess.txt  mcmc_settings.txt  nuts_settings.txt  param_bounds.txt  params_to_calibrate.txt  proposal_sigmas.txt  pso_settings.txt
data/processed/: processed_data.csv
data/raw/: ES.csv:ZoneIdentifier
include/base/: ModelParameters.hpp  SIRModel.hpp  SIR_population_variable.hpp  SIR_stochastic.hpp
include/exceptions/: CSVReadException.hpp  Exceptions.hpp
include/model/: AgeSEPAIHRDModel.hpp  AgeSEPAIHRDsimulator.hpp  ModelConstants.hpp  PieceWiseConstantNPIStrategy.hpp  PiecewiseConstantParameterStrategy.hpp  PostCalibrationAnalyser.hpp  ReproductionNumberCalculator.hpp  SEPAIHRDModelCalibration.hpp
include/model/interfaces/: IGradientObjectiveFunction.hpp  INpiStrategy.hpp
include/model/objectives/: SEPAIHRDGradientObjectiveFunction.hpp  SEPAIHRDObjectiveFunction.hpp
include/model/optimizers/: NUTSSampler.hpp  ParticleSwarmOptimizer.hpp
include/model/parameters/: SEPAIHRDParameterManager.hpp  SEPAIHRDParameters.hpp
include/sir_age_structured/: AgeSIRModel.hpp  EpidemicModel.hpp  InterventionCallBack.hpp  ModelCalibrator.hpp  ModelFactory.hpp  SimulationResult.hpp  SimulationResultProcessor.hpp  Simulator.hpp
include/sir_age_structured/caching/: SimulationCache.hpp
include/sir_age_structured/interfaces/: IEpidemicModel.hpp  IObjectiveFunction.hpp  IOdeSolverStrategy.hpp  IOptimizationAlgorithm.hpp  IParameterManager.hpp  ISimulationCache.hpp
include/sir_age_structured/objectives/: PoissonLikeLihoodObjective.hpp
include/sir_age_structured/optimizers/: HillClimbingOptimizer.hpp  MetropolisHastingsSampler.hpp
include/sir_age_structured/parameters/: SIRParamerterManager.hpp
include/sir_age_structured/solvers/: CashKarpSolverStrategy.hpp  Dropri5SolverStrategy.hpp  FehlbergSolverStrategy.hpp
include/utils/: FileUtils.hpp  GetCalibrationData.hpp  Logger.hpp  ReadCalibrationConfiguration.hpp  ReadContactMatrix.hpp
scripts/: Readme.md
scripts/DataVisualization/: CovidDataVisualizer.py  main_data_visualization.py  mcmc_sample_histograms.py  plot_sepaihrd_dynamics.py  visualizeparameterssample.py
scripts/age-structured-calibration/: compare_calibration_and_observed.py
scripts/data-processing/: CovidDataProcessor.py  main_data_processing.py
scripts/model/: PostCalibrationAnalysis.py
scripts/utils/: FileUtils.py
src/base/: SIRModel.cpp  SIR_population_variable.cpp  SIR_stochastic.cpp
src/base/docs/: README.md
src/base/main/: ModelParameters.cpp  input_parameters.txt  sir_main.cpp  sir_pop_va_main.cpp  sir_sto_main.cpp
src/exceptions/: CSVReadException.cpp
src/model/: AgeSEPAIHRDModel.cpp  AgeSEPAIHRDsimulator.cpp  PieceWiseConstantNPIStrategy.cpp  PiecewiseConstantParameterStrategy.cpp  PostCalibrationAnalyser.cpp  ReproductionNumberCalculator.cpp  SEPAIHRDModelCalibration.cpp  main.cpp
src/model/objectives/: SEPAIHRDObjectiveFunction.cpp
src/model/optimizers/: NUTSSampler.cpp  ParticleSwarmOptimizer.cpp
src/model/parameters/: SEPAIHRDParameterManager.cpp
src/sir_age_structured/: AgeSIRModel.cpp  CalibrationDemo.cpp  InterventionCallback.cpp  ModelCalibrator.cpp  ModelFactory.cpp  SimulationResultProcessor.cpp  Simulator.cpp  main.cpp
src/sir_age_structured/caching/: SimulationCache.cpp
src/sir_age_structured/objectives/: PoissonLikelihoodObjective.cpp
src/sir_age_structured/optimizers/: HillClimbingOptimizer.cpp  MetropolisHastingsSampler.cpp
src/sir_age_structured/parameters/: SIRParameterManager.cpp
src/sir_age_structured/solvers/: CashKarpSolverStrategy.cpp  Dopri5SolverStrategy.cpp  FehlbergSolverStrategy.cpp
src/utils/: FileUtils.cpp  GetCalibrationData.cpp  ReadCalibrationConfiguration.cpp  ReadContactMatrix.cpp
tests/model/: SEPAIHRDObjectivefunctionTest.cpp
tests/sir_age_structured/: AgeSIRModelTest.cpp  ModelFactoryTest.cpp
tests/utils/: FileUtilsTests.cpp  GetCalibrationDataTests.cpp  ReadContactMatrixTests.cpp
